--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "uninstall": "^0.0.0",
     "vitest": "^0.25.8"
   },
   "devDependencies": {
